# src/modules/user/dto/user.input.ts
@@ -1,0 +1,14 @@
+import { UserRole } from 'common/common.enum'
+
+export class UserInput {
+  username: string
+  password: string
+  avatar?: string
+  role?: UserRole
+}
+
+export class UserUpdateInput {
+  username: string
+  avatar?: string
+  role?: UserRole
+}
